--- a/_posts/2014-06-19-crystal-0.1.0-released.md
+++ b/_posts/2014-06-19-crystal-0.1.0-released.md
@@ -80,7 +80,7 @@ f = ->(x : Int32) { x + 1 }
 puts f.call(2) #=> 3
 {% endhighlight %}
 
-A function literal has access to the environment where it was created. 例:
+A function literal has access to the environment where it was created. 例をあげます。
 
 {% highlight ruby %}
 a = 1
