--- a/locale/ja/crystal-book/book.json
+++ b/locale/ja/crystal-book/book.json
@@ -1,15 +1,12 @@
 {
     "gitbook": "3.2.2",
     "links": {
-        "contributePrefix": "https://github.com/crystal-lang/crystal-book/"
+        "contributePrefix": "https://github.com/crystal-jp/ja.crystal-lang.org"
     },
-    "plugins": ["ga", "edit-link", "offline"],
+    "plugins": ["edit-link", "offline"],
     "pluginsConfig": {
-        "ga": {
-            "token": "UA-42353458-1"
-        },
         "edit-link": {
-            "base": "https://github.com/crystal-lang/crystal-book/edit/master",
+            "base": "https://github.com/crystal-jp/ja.crystal-lang.org/edit/master/locale/ja/crystal-book/",
             "label": "Edit This Page"
         }
     }
