feat(website): translate index.html

--- a/locale/ja/crystal-website/_posts/2014-06-19-crystal-0.1.0-released.md
+++ b/locale/ja/crystal-website/_posts/2014-06-19-crystal-0.1.0-released.md
@@ -79,7 +79,7 @@ f = ->(x : Int32) { x + 1 }
 puts f.call(2) #=> 3
 {% endhighlight %}</div>
 
-A function literal has access to the environment where it was created. 例をあげます。
+A function literal has access to the environment where it was created. For example:
 
 <div class="code_section">{% highlight ruby %}
 a = 1
@@ -102,12 +102,12 @@ A closure has also access to the `self` of the class where it is declared:
 class Foo
   property x
 
-def initialize(@x)
-end
+  def initialize(@x)
+  end
 
-def x_proxy
-->{ @x }
-end
+  def x_proxy
+    ->{ @x }
+  end
 end
 
 foo = Foo.new(1)
@@ -149,9 +149,9 @@ class Foo
   def initialize(@x)
   end
 
-def bar(z)
-@x + z
-end
+  def bar(z)
+    @x + z
+  end
 end
 
 foo = Foo.new(1)
@@ -163,7 +163,7 @@ Finally, a block can be captured and automatically converted to a function liter
 but for this you must specify the arguments' types in the block argument:
 
 <div class="code_section">{% highlight ruby %}
-def foo(&amp;block : Int32 -> Int32)
+def foo(&block : Int32 -> Int32)
   block
 end
 
@@ -183,7 +183,7 @@ type of the block:
 
 <div class="code_section">{% highlight ruby %}
 # U is a free variable
-def foo(&amp;block : Int32 -> U)
+def foo(&block : Int32 -> U)
   block
 end
 
@@ -206,7 +206,7 @@ method's signature, like it is done in other languages like Java, C#, Rust, D, e
 If you don't care about the return value of a passed block, you can ommit the block's return type:
 
 <div class="code_section">{% highlight ruby %}
-def foo(&amp;block : Int32 -> )
+def foo(&block : Int32 -> )
   block
 end
 
@@ -222,13 +222,13 @@ class Foo
     @callbacks = [] of ->
   end
 
-def after_save(&block)
-@callbacks << block
-end
+  def after_save(&block)
+    @callbacks << block
+  end
 
-def save
-@callbacks.each &.call
-end
+  def save
+    @callbacks.each &.call
+  end
 end
 
 foo = Foo.new
@@ -265,7 +265,7 @@ is exactly the same as the following code, only nicer:
 <div class="code_section">{% highlight ruby %}
 a = 0
 i = 0
-while i &lt; 10
+while i < 10
   a += i
   i += 1
 end
@@ -276,7 +276,7 @@ That way Crystal has zero-cost iteration abstraction, while still being able to 
 
 <div class="code_section">{% highlight ruby %}
 f = ->(x : Int32) { puts x }
-10.times &amp;f
+10.times &f
 {% endhighlight ruby %}</div>
 
 ### Macros
@@ -285,8 +285,8 @@ Macros allow generating code at compile time. For example, the getter macro is s
 
 <pre class="code">
 macro getter(name)
-  def {{name}}
-    @{{name}}
+  def &#123;&#123;name}}
+    @&#123;&#123;name}}
   end
 end
 
@@ -307,13 +307,13 @@ You can also use `if` and `for` inside a macro:
 
 <pre class="code">
 macro generate_methods(names)
-  {% for name, index in names %}
-    {% if index != 1 %}
-      def {{name}}
+  &#123;% for name, index in names %}
+    &#123;% if index != 1 %}
+      def &#123;&#123;name}}
         puts {{i}}
       end
-    {% end %}
-  {% end %}
+    &#123;% end %}
+  &#123;% end %}
 end
 
 generate_methods [foo, bar, baz]
@@ -328,7 +328,7 @@ which remaining powerful. For example, some methods are supported inside a macro
 
 <pre class="code">
 macro generate_method_downcase(name)
-  def {{name.downcase}}
+  def &#123;&#123;name.downcase}}
     puts "Hello!"
   end
 end
@@ -344,7 +344,7 @@ Another cool thing is that you can execute system commands:
 
 <pre class="code">
 macro compile_time_date
-  {{ system("date").stringify }}
+  &#123;&#123; system("date").stringify }}
 end
 
 build_date = compile_time_date
@@ -368,9 +368,9 @@ class Foo
 
   def instance_vars : Array(String)
     a = [] of String
-    {% for ivar in @instance_vars %}
-      a.push {{ivar.stringify}}
-    {% end %}
+    &#123;% for ivar in @instance_vars %}
+      a.push &#123;&#123;ivar.stringify}}
+    &#123;% end %}
     a
   end
 end
