feat(website): update ja

--- a/locale/ja/crystal-website/_posts/2014-12-04-crystal-0.5.4-released.md
+++ b/locale/ja/crystal-website/_posts/2014-12-04-crystal-0.5.4-released.md
@@ -18,7 +18,7 @@ Most notably, you can now subclass generic types.
 
 <div class="code_section">{% highlight ruby %}
 # Define a new generic class that subclass another one
-class MyArray(T) &lt; Array(T)
+class MyArray(T) < Array(T)
 end
 
 # Define a non-generic class that subclass an instance of a generic another one
@@ -32,10 +32,10 @@ There's also a more compact way to define JSON mappings:
 require "json"
 
 class Person
-json_mapping({
-name: String,
-age: Int32
-})
+  json_mapping({
+    name: String,
+    age: Int32
+  })
 end
 
 person = Person.from_json %({"name": "John", "age": 30})
