--- a/locale/ja/crystal-website/_posts/2016-01-23-crystal-0.11.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-01-23-crystal-0.11.0-released.md
@@ -75,32 +75,32 @@ understand the old syntax and will modify your code to use the new syntax :-)
 ### Heredocs
 
 String heredocs are now more powerful and convenient: leading space is removed from heredoc lines according
-to the leading space of the closing delimiter. 例をあげます。
+to the leading space of the closing delimiter. For example:
 
 <div class="code_section">{% highlight ruby %}
 # Same as "Hello\n  world"
-&lt;&lt;-STRING
+<<-STRING
   Hello
     world
   STRING
 
 # Same as "  Hello\n    world"
 <<-STRING
-Hello
-world
-STRING
+    Hello
+      world
+  STRING
 {% endhighlight ruby %}</div>
 
-The old behaviour was inconvenient because it forced you to write all content aligned to the left. 例をあげます。
+The old behaviour was inconvenient because it forced you to write all content aligned to the left. For example:
 
 <div class="code_section">{% highlight ruby %}
 class Program
-  USAGE = &lt;&lt;-USAGE
+  USAGE = <<-USAGE
 Usage: crystal [command] [switches] [program file] [--] [arguments]
 
 Command:
-init                     generate a new project
-...
+    init                     generate a new project
+    ...
 USAGE
 end
 {% endhighlight ruby %}</div>
@@ -109,7 +109,7 @@ Now you can write it like this:
 
 <div class="code_section">{% highlight ruby %}
 class Program
-  USAGE = &lt;&lt;-USAGE
+  USAGE = <<-USAGE
     Usage: crystal [command] [switches] [program file] [--] [arguments]
 
     Command:
@@ -123,18 +123,18 @@ Thank you [rhysd](https://github.com/rhysd) for suggesting this change.
 
 ## Semantic changes
 
-Previously, `return` could be used inside a captured block. 例をあげます。
+Previously, `return` could be used inside a captured block. For example:
 
 <div class="code_section">{% highlight ruby %}
-def capture(&amp;block : -> Int32)
+def capture(&block : -> Int32)
   block
 end
 
 def method
-proc = capture do |x|
-return 10 if x == 1
-2
-end
+  proc = capture do |x|
+    return 10 if x == 1
+    2
+  end
 end
 {% endhighlight ruby %}</div>
 
