--- a/locale/ja/crystal-website/_posts/2016-03-07-crystal-0.13.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-03-07-crystal-0.13.0-released.md
@@ -35,23 +35,23 @@ With this new syntax you can also match types, and variables inside a `when` bod
 by the compiler to have those types:
 
 <div class="code_section">{% highlight ruby %}
-a = rand &lt; 0.5 ? 1 : "hello"
-b = rand &lt; 0.5 ? 2 : "bye"
+a = rand < 0.5 ? 1 : "hello"
+b = rand < 0.5 ? 2 : "bye"
 
 case {a, b}
 when {Int32, Int32}
-puts "Both ints: #{a + 1}, #{b + 1}"
+  puts "Both ints: #{a + 1}, #{b + 1}"
 when {String, String}
-puts "Both strings: #{a.upcase}, #{b.upcase}"
+  puts "Both strings: #{a.upcase}, #{b.upcase}"
 else
-puts "Other: #{a}, #{b}"
+  puts "Other: #{a}, #{b}"
 end
 {% endhighlight ruby %}</div>
 
 ### Backreferences in sub and gsub
 
 `String#sub` and `String#gsub` now feature a syntax for backreferences, similar to Ruby's.
-例をあげます。
+For example:
 
 <div class="code_section">{% highlight ruby %}
 puts "hello world".gsub(/([aeiou])/, "*\\1*") # => "h*e*ll*o* w*o*rld"
@@ -71,9 +71,9 @@ thanks to [jreinert](https://github.com/repomaa):
 require "csv"
 
 string = <<-CSV
-name;value
-foo;bar
-CSV
+         name;value
+         foo;bar
+         CSV
 CSV.parse(string, separator: ';') # => [["name", "value"], ["foo", "bar"]]
 {% endhighlight ruby %}</div>
 
