--- a/locale/ja/crystal-website/_posts/2016-05-05-crystal-0.16.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-05-05-crystal-0.16.0-released.md
@@ -20,7 +20,7 @@ The new rules are explained in the [official docs](http://crystal-lang.org/docs/
 but let's quickly review the change.
 
 Before this release, the type of global, class and instance variables was inferred
-globally in the program by analyzing all uses. 例をあげます。
+globally in the program by analyzing all uses. For example:
 
 <div class="code_section">{% highlight ruby %}
 class Some
@@ -46,9 +46,9 @@ class Some
   def initialize(@var)
   end
 
-def var=(value)
-@var = value
-end
+  def var=(value)
+    @var = value
+  end
 end
 
 some = Some.new(1)
@@ -187,16 +187,16 @@ require "oauth2"
 
 # Option 1
 client = OAuth2::Client.new(
-"some_host",
-"some_client_secret",
-"some_client_id"
+  "some_host",
+  "some_client_secret",
+  "some_client_id"
 )
 
 # Option 2
 client = OAuth2::Client.new(
-host: "some_host",
-client_secret: "some_client_secret",
-client_id: "some_client_id"
+  host: "some_host",
+  client_secret: "some_client_secret",
+  client_id: "some_client_id"
 )
 {% endhighlight ruby %}</div>
 
@@ -226,7 +226,7 @@ puts answer # => 0.810536
 
 ### JSON and YAML improvements
 
-Enums, `BigInt` and `BigFloat` can now be mapped to JSON and YAML very easily. 例をあげます。
+Enums, `BigInt` and `BigFloat` can now be mapped to JSON and YAML very easily. For example:
 
 <div class="code_section">{% highlight ruby %}
 require "json"
@@ -234,16 +234,16 @@ require "big"
 require "big/json"
 
 enum Color
-Red   = 1
-Green = 2
-Blue  = 3
+  Red   = 1
+  Green = 2
+  Blue  = 3
 end
 
 class Lollipop
-JSON.mapping({
-color:    Color,
-diameter: BigFloat,
-})
+  JSON.mapping({
+    color:    Color,
+    diameter: BigFloat,
+  })
 end
 
 json = %({"color": 2, "diameter": 12.3456789123456789})
