--- a/locale/ja/crystal-website/_posts/2016-05-17-crystal-0.17.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-05-17-crystal-0.17.0-released.md
@@ -184,7 +184,7 @@ def foo(x, y, z)
 end
 
 def forwarder(*args, **nargs)
-foo(*args, **nargs)
+  foo(*args, **nargs)
 end
 
 forwarder 10, z: 3, y: 2 # => 10*2 - 3 = 17
@@ -205,7 +205,7 @@ suggestions, critics and comments coming, as they can have a huge impact on the 
 
 The detailed algorithm is explained [here](http://crystal-lang.org/docs/syntax_and_semantics/default_values_named_arguments_splats_tuples_and_overloading.html),
 but a few highlights of it include the ability to force arguments to be passed as named arguments, and to overload
-based on required named arguments. 例をあげます。
+based on required named arguments. For example:
 
 <div class="code_section">{% highlight ruby %}
 # Two positional arguments allowed, z must be passed as a named argument
@@ -250,7 +250,7 @@ def spawn(*, name : String)
 end
 
 spawn(name: "worker") do
-# ...
+  # ...
 end
 {% endhighlight ruby %}</div>
 
@@ -271,7 +271,7 @@ end
 # Better: you can use `by` when invoking the method,
 # and `amount` inside the method body
 def increment(value, by amount)
-value + amount
+  value + amount
 end
 
 increment 1, 2     # => 3
@@ -285,7 +285,7 @@ to a given type, if it's of that type, and otherwise returns `nil`. In a way, it
 raises a runtime exception instead of returning `nil`):
 
 <div class="code_section">{% highlight ruby %}
-value = rand &lt; 0.5 ? -3 : nil
+value = rand < 0.5 ? -3 : nil
 result = value.as?(Int32) || 10
 
 value.as?(Int32).try &.abs
