--- a/locale/ja/crystal-website/_posts/2016-06-14-crystal-0.18.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-06-14-crystal-0.18.0-released.md
@@ -42,15 +42,15 @@ We can also use unions in mappings, even unions of complex objects:
 require "json"
 
 struct Point
-JSON.mapping x: Int32, y: Int32
+  JSON.mapping x: Int32, y: Int32
 end
 
 struct Circle
-JSON.mapping center: Int32, radius: Int32
+  JSON.mapping center: Int32, radius: Int32
 end
 
 class Result
-JSON.mapping shape: Point | Circle
+  JSON.mapping shape: Point | Circle
 end
 
 result = Result.from_json(%({"shape": {"x": 1, "y": 2}}))
@@ -60,7 +60,7 @@ result = Result.from_json(%({"shape": {"radius": 1, "center": 2}}))
 result # => Result(@shape=Circle(@center=2, @radius=1))
 
 shapes = Array(Point | Circle).from_json(%([{"x": 1, "y": 2},
-{"radius": 1, "center": 2}]))
+  {"radius": 1, "center": 2}]))
 shapes # => [Point(@x=1, @y=2), Circle(@center=2, @radius=1)]
 {% endhighlight ruby %}</div>
 
@@ -74,17 +74,17 @@ and a huge part of its standard library.
 In Ruby there's the [Enumerable](http://ruby-doc.org/core-2.3.1/Enumerable.html) module. You just
 need to define an `each` method that yields some values, `include Enumerable`, and you get
 a lot of collection methods like [map](http://ruby-doc.org/core-2.3.1/Enumerable.html#method-i-map)
-and [select](http://ruby-doc.org/core-2.3.1/Enumerable.html#method-i-select). 例をあげます。
+and [select](http://ruby-doc.org/core-2.3.1/Enumerable.html#method-i-select). For example:
 
 <div class="code_section">{% highlight ruby %}
 class Foo
   include Enumerable
 
-def each
-yield 1
-yield 2
-yield 3
-end
+  def each
+    yield 1
+    yield 2
+    yield 3
+  end
 end
 
 foo = Foo.new
@@ -157,7 +157,7 @@ hash.map2 { |key, value| "#{key}: #{value}" } # => ["1: a", "2: b"]
 What's going on?
 
 The answer is that if a method yields an array, and the block specifies more than
-one argument, the array is unpacked. 例をあげます。
+one argument, the array is unpacked. For example:
 
 <div class="code_section">{% highlight ruby %}
 def foo
@@ -165,8 +165,8 @@ def foo
 end
 
 foo do |x, y|
-x # => 1
-y # => 2
+  x # => 1
+  y # => 2
 end
 {% endhighlight ruby %}</div>
 
@@ -197,14 +197,14 @@ def foo
 end
 
 def bar
-foo do |*args|
-yield *args
-end
+  foo do |*args|
+    yield *args
+  end
 end
 
 bar do |x, y|
-x # => 1
-y # => 2
+  x # => 1
+  y # => 2
 end
 {% endhighlight ruby %}</div>
 
@@ -234,9 +234,9 @@ that provides an efficient DSL for generating HTML:
 require "html_builder"
 
 html = HTML.build do
-a(href: "http://crystal-lang.org") do
-text "crystal is awesome"
-end
+  a(href: "http://crystal-lang.org") do
+    text "crystal is awesome"
+  end
 end
 
 puts html # => %(<a href="http://crystal-lang.org">crystal is awesome</a>)
@@ -255,9 +255,9 @@ we'd had to use a `Hash`, which is much slower. Well, now we can:
 require "html_builder"
 
 html = HTML.build do
-a(href: "http://crystal-lang.org", "data-foo": "yes") do
-text "crystal is awesome"
-end
+  a(href: "http://crystal-lang.org", "data-foo": "yes") do
+    text "crystal is awesome"
+  end
 end
 
 puts html # => %(<a href="http://crystal-lang.org" data-foo="yes">crystal is awesome</a>)
@@ -277,18 +277,18 @@ require "json"
 Class variables now work more like Ruby's class instance variables: they are available
 in subclasses, with the same type, but each subclass has a different value for it.
 
-例をあげます。
+For example:
 
 <div class="code_section">{% highlight ruby %}
 class Foo
   @@value = 1
 
-def self.value
-@@value
-end
+  def self.value
+    @@value
+  end
 
-def self.value=(@@value)
-end
+  def self.value=(@@value)
+  end
 end
 
 class Bar < Foo
