--- a/locale/ja/crystal-website/_posts/2016-12-06-crystal-0.20.1-released.md
+++ b/locale/ja/crystal-website/_posts/2016-12-06-crystal-0.20.1-released.md
@@ -21,19 +21,19 @@ class MyModel
     id: Int32
   }
 
-macro extra_attributes(**values)
-{{ "{%" }} for key, value in values %}
-{{ "{%" }} MAPPING[key] = value %}
-{{ "{%" }} end %}
-end
+  macro extra_attributes(**values)
+    {{ "{%" }} for key, value in values %}
+      {{ "{%" }} MAPPING[key] = value %}
+    {{ "{%" }} end %}
+  end
 
-macro finished
-JSON.mapping({{ "{{" }}MAPPING}})
-end
+  macro finished
+    JSON.mapping({{ "{{" }}MAPPING}})
+  end
 end
 
 class MyModel
-extra_attributes name: String, foo: Bool
+  extra_attributes name: String, foo: Bool
 end
 
 # JSON mapping will have attribute id, name and foo.
@@ -44,15 +44,15 @@ end
 
 <div class="code_section">{% highlight ruby %}
 class Foo
-  def add(method, &amp;block : -> U) forall U
+  def add(method, &block : -> U) forall U
     puts "added #{method} #{block}"
   end
 
-macro method_missing(call)
-def {{ "{{" }}call.name}}(&block : -> U) forall U
-add({{ "{{" }}call.name.stringify}}, &block)
-end
-end
+  macro method_missing(call)
+    def {{ "{{" }}call.name}}(&block : -> U) forall U
+      add({{ "{{" }}call.name.stringify}}, &block)
+    end
+  end
 end
 
 Foo.new.foo { 1 } # => added foo #<Proc(Int32):0x1063173a0>
