--- a/locale/ja/crystal-website/_posts/2018-06-15-crystal-0.25.0-released.md
+++ b/locale/ja/crystal-website/_posts/2018-06-15-crystal-0.25.0-released.md
@@ -88,17 +88,17 @@ class Foo
 end
 
 class Bar < Foo
-def do_it
-end
+  def do_it
+  end
 end
 
 class Baz < Foo
-def do_it
-end
+  def do_it
+  end
 end
 
 class Qux < Foo
-# there is no do_it
+  # there is no do_it
 end
 
 var = rand < 0.5 ? Bar.new : Baz.new
@@ -127,8 +127,8 @@ From now on if you use the built-in `HTTP::Server` you first need to configure i
 require "http/server"
 
 server = HTTP::Server.new do |context|
-context.response.content_type = "text/plain"
-context.response.print "Hello world, got #{context.request.path}!"
+  context.response.content_type = "text/plain"
+  context.response.print "Hello world, got #{context.request.path}!"
 end
 
 server.bind_tcp "0.0.0.0", 8080
@@ -165,7 +165,7 @@ The API was renamed and reworked for compare operations and accessing file prope
 If you use Heredoc a lot of you might be interested in this one. Up to 0.24.2 if you wanted to call a method on a string specified using Heredoc you would do:
 
 <div class="code_section">{% highlight ruby %}
-puts &lt;&lt;-FOO
+puts <<-FOO
   message
   FOO.downcase
 {% endhighlight ruby %}</div>
@@ -173,7 +173,7 @@ puts &lt;&lt;-FOO
 From now on the method needs to be at the initial delimiter
 
 <div class="code_section">{% highlight ruby %}
-puts &lt;&lt;-FOO.downcase
+puts <<-FOO.downcase
   message
   FOO
 {% endhighlight ruby %}</div>
@@ -181,7 +181,7 @@ puts &lt;&lt;-FOO.downcase
 It's subtle but important, and it plays better with multiple Heredocs in a single call now that you can:
 
 <div class="code_section">{% highlight ruby %}
-puts &lt;&lt;-ONE.upcase, &lt;&lt;-TWO.capitalize
+puts <<-ONE.upcase, <<-TWO.capitalize
   hello world
   ONE
   second message
