--- a/locale/ja/crystal-website/_posts/2019-01-30-crystal-0.27.1-released.md
+++ b/locale/ja/crystal-website/_posts/2019-01-30-crystal-0.27.1-released.md
@@ -43,7 +43,7 @@ Let’s see some quick examples of these additions. For `Iterator#slice_after` a
 
 <div class="code_section">{% highlight crystal %}
 ary = [1, 3, 5, 8, 10, 11, 13, 15, 16, 17]
-ary.slice_after(&amp;.even?).each { |x| puts x }
+ary.slice_after(&.even?).each { |x| puts x }
 # output:
 # [1, 3, 5, 8]
 # [10]
@@ -55,7 +55,7 @@ For `Iterator#slice_before` added by ([#7152](https://github.com/crystal-lang/cr
 
 <div class="code_section">{% highlight crystal %}
 ary = [1, 3, 5, 8, 10, 11, 13, 15, 16, 17]
-ary.slice_before(&amp;.even?).each { |x| puts x }
+ary.slice_before(&.even?).each { |x| puts x }
 # output:
 # [1, 3, 5]
 # [8]
@@ -125,9 +125,9 @@ class Tree
   def initialize(@value : Int32, @children : Array(Tree))
   end
 
-def sum : Int32
-@value + @children.each.map(&.sum).sum
-end
+  def sum : Int32
+    @value + @children.each.map(&.sum).sum
+  end
 end
 
 Tree.new(1, [] of Tree).sum
