--- a/locale/ja/crystal-website/_posts/2019-08-01-crystal-0.30.0-released.md
+++ b/locale/ja/crystal-website/_posts/2019-08-01-crystal-0.30.0-released.md
@@ -26,9 +26,9 @@ abstract class Foo
 end
 
 class Bar < Foo
-def foo
-1
-end
+  def foo
+    1
+  end
 end
 {% endhighlight crystal %}</div>
 
@@ -38,16 +38,16 @@ You don’t need to copy and paste it. A subtype can be used.
 
 <div class="code_section">{% highlight crystal %}
 class Parent; end
-class Child &lt; Parent; end
+class Child < Parent; end
 
 abstract class Foo
-abstract def foo : Parent
+  abstract def foo : Parent
 end
 
 class Bar < Foo
-def foo : Child
-Child.new
-end
+  def foo : Child
+    Child.new
+  end
 end
 {% endhighlight crystal %}</div>
 
@@ -64,8 +64,8 @@ end
 <div class="code_section">{% highlight shell %}
 In src/enumerable.cr:37:16
 
-37 | abstract def each(&block : T -> _)
-^---
+ 37 | abstract def each(&block : T -> _)
+                   ^---
 Error: abstract `def Enumerable(T)#each(&block)` must be implemented by Foo
 {% endhighlight shell %}</div>
 
