--- a/locale/ja/crystal-website/_posts/2019-09-23-crystal-0.31.0-released.md
+++ b/locale/ja/crystal-website/_posts/2019-09-23-crystal-0.31.0-released.md
@@ -21,7 +21,7 @@ There is a new, and cleaner, way to declare type restrictions for non-captured b
 A nameless parameter `&` can now appear at the end of the list. It can optionally have type restrictions that will be used by the compiler and by the doc tool.
 
 <div class="code_section">{% highlight crystal %}
-def foo(x, y, &amp; : Int32 -> Int32)
+def foo(x, y, & : Int32 -> Int32)
 end
 {% endhighlight crystal %}</div>
 
