--- a/locale/ja/crystal-website/_posts/2019-12-11-crystal-0.32.0-released.md
+++ b/locale/ja/crystal-website/_posts/2019-12-11-crystal-0.32.0-released.md
@@ -37,11 +37,11 @@ Given
 alias X = Int8 | Int32
 
 def foo(x : Int32)
-42
+  42
 end
 
 def foo(x : X)
-'a'
+  'a'
 end
 {% endhighlight crystal %}</div>
 
@@ -66,8 +66,8 @@ Attention to details contributes to happiness. There will no longer be `Nil asse
 class Foo
   getter! bar
 
-def initialize(@bar : Int32? = nil)
-end
+  def initialize(@bar : Int32? = nil)
+  end
 end
 
 Foo.new.bar # raises NilAssertionError: Foo#bar can't be nil
@@ -85,22 +85,22 @@ The methods you will be looking for are `before_each`, `after_each`, `before_all
 require "spec"
 
 describe "Users" do
-before_all do
-# setup a database
-end
+  before_all do
+    # setup a database
+  end
 
-before_each do
-# truncate all tables
-end
+  before_each do
+    # truncate all tables
+  end
 
-it "can create entity" do
-# test something assuming empty db
-end
+  it "can create entity" do
+    # test something assuming empty db
+  end
 
-describe "initialized system" do
-before_each do
-# initialize some data
-end
+  describe "initialized system" do
+    before_each do
+      # initialize some data
+    end
 
     after_each do
       # clean up some resources
@@ -109,7 +109,7 @@ end
     it "existing entity can work" do
       # test something assuming initialized data
     end
-end
+  end
 end
 {% endhighlight crystal %}</div>
 
@@ -124,17 +124,17 @@ describe Foo do
   it "(1) an untagged test" do
   end
 
-it "(2) a fast test", tags: "fast" do
-end
+  it "(2) a fast test", tags: "fast" do
+  end
 
-it "(3) a slow test", tags: "slow"do
-end
+  it "(3) a slow test", tags: "slow"do
+  end
 
-it "(4) a test with a star", tags: "starred" do
-end
+  it "(4) a test with a star", tags: "starred" do
+  end
 
-it "(5) a slow test with a star", tags: %w(slow starred) do  # same as tags: ["slow", "starred"]
-end
+  it "(5) a slow test with a star", tags: %w(slow starred) do  # same as tags: ["slow", "starred"]
+  end
 end
 {% endhighlight crystal %}</div>
 
@@ -196,9 +196,9 @@ String interpolations are widely used in the language. The std-lib is updated wi
 
 <div class="code_section">{% highlight crystal %}
 String.build do |io|
-  io &lt;&lt; "hello "
-  io &lt;&lt; world
-  io &lt;&lt; "!"
+  io << "hello "
+  io << world
+  io << "!"
 end
 {% endhighlight crystal %}</div>
 
