--- a/locale/ja/crystal-book/book.json
+++ b/locale/ja/crystal-book/book.json
@@ -1,12 +1,15 @@
 {
     "gitbook": "3.2.2",
     "links": {
-        "contributePrefix": "https://github.com/crystal-jp/ja.crystal-lang.org"
+        "contributePrefix": "https://github.com/crystal-lang/crystal-book/"
     },
-    "plugins": ["edit-link", "offline"],
+    "plugins": ["ga", "edit-link", "offline"],
     "pluginsConfig": {
+        "ga": {
+            "token": "UA-42353458-1"
+        },
         "edit-link": {
-            "base": "https://github.com/crystal-jp/ja.crystal-lang.org/edit/master/locale/ja/crystal-book/",
+            "base": "https://github.com/crystal-lang/crystal-book/edit/master",
             "label": "Edit This Page"
         }
     }
