--- a/locale/ja/crystal-website/_posts/2013-09-15-to-proc.md
+++ b/locale/ja/crystal-website/_posts/2013-09-15-to-proc.md
@@ -16,7 +16,7 @@ Ruby blocks are powerful. You can easily convert an array of numbers to strings:
 Of course, you can also do this with this shortcut:
 
 <div class="code_section">{% highlight ruby %}
-[1, 2, 3].map &amp;:to_s #=> ["1", "2", "3"]
+[1, 2, 3].map &:to_s #=> ["1", "2", "3"]
 {% endhighlight ruby %}</div>
 
 The `&` operator converts an object to a Proc suitable to be
@@ -24,7 +24,7 @@ passed as a block. You can make any class respond to this operator by implementi
 a `to_proc` method. Symbol has a [to_proc](http://ruby-doc.org/core-2.0.0/Symbol.html#method-i-to_proc)
 method.
 
-This is all very nice but what if you want to pass an argument to the method. 例をあげます。
+This is all very nice but what if you want to pass an argument to the method. For example:
 
 <div class="code_section">{% highlight ruby %}
 [10, 20, 30].map { |n| n.modulo(3) } #=> [1, 2, 0]
@@ -48,7 +48,7 @@ do `&:to_s`, because the argument to `&` is a Symbol we can rewrite the source c
 
 <div class="code_section">{% highlight ruby %}
 # This:
-[1, 2, 3].map &amp;:to_s
+[1, 2, 3].map &:to_s
 
 # is rewritten to this:
 [1, 2, 3].map { |x| x.to_s }
@@ -60,15 +60,15 @@ Fortunately, [waj](https://github.com/waj) came with a better proposal: what if 
 `&.to_s`?
 
 <div class="code_section">{% highlight ruby %}
-[1, 2, 3].map &amp;.to_s
+[1, 2, 3].map &.to_s
 {% endhighlight ruby %}</div>
 
 Now, this is a new syntax, different from Ruby. If you do this in Ruby...
 
 <pre class="code">
-irb(main):001:0> [1, 2, 3].map &amp;.to_s
+irb(main):001:0> [1, 2, 3].map &.to_s
 SyntaxError: (irb):1: syntax error, unexpected '.'
-[1, 2, 3].map &amp;.to_s
+[1, 2, 3].map &.to_s
                ^
 </pre>
 
@@ -78,25 +78,25 @@ is available for giving it a new meaning. So in Crystal we chose to use this syn
 With this little change, we can pass arguments to the method very easily:
 
 <div class="code_section">{% highlight ruby %}
-[10, 20, 30].map &amp;.modulo(3) #=> [1, 2, 0] ... but only in Crystal ;-)
+[10, 20, 30].map &.modulo(3) #=> [1, 2, 0] ... but only in Crystal ;-)
 {% endhighlight ruby %}</div>
 
 Not only that, but you can also write this:
 
 <div class="code_section">{% highlight ruby %}
-[1, 20, 300].map &amp;.to_s.size #=> 1, 2, 3
+[1, 20, 300].map &.to_s.size #=> 1, 2, 3
 {% endhighlight ruby %}</div>
 
 Or this:
 
 <div class="code_section">{% highlight ruby %}
-[[1, -2], [-3, -4]].map(&amp;.map(&amp;.abs)) #=> [[1, 2], [3, 4]]
+[[1, -2], [-3, -4]].map(&.map(&.abs)) #=> [[1, 2], [3, 4]]
 {% endhighlight ruby %}</div>
 
 And of course this:
 
 <div class="code_section">{% highlight ruby %}
-[1, 2, 3, 4].map &amp;.**(2) #=> [1, 4, 9, 16]
+[1, 2, 3, 4].map &.**(2) #=> [1, 4, 9, 16]
 {% endhighlight ruby %}</div>
 
 The best thing is that this is just a syntax rewrite without any performance penalty.
