--- a/locale/ja/crystal-website/_posts/2016-11-22-crystal-0.20.0-released.md
+++ b/locale/ja/crystal-website/_posts/2016-11-22-crystal-0.20.0-released.md
@@ -24,17 +24,17 @@ Support for GitLab dependencies was also added.
 [Julien Portalier](https://github.com/ysbaddaden) also added
 [line and file number information to exception backtraces](https://github.com/crystal-lang/crystal/pull/3303)
 when programs are compiled with `-d` or `--debug`.
-例をあげます。
+For example:
 
 <div class="code_section">{% highlight ruby %}
 # example.cr
 
 def foo
-bar
+  bar
 end
 
 def bar
-raise "OH NO!"
+  raise "OH NO!"
 end
 
 foo
@@ -78,31 +78,31 @@ Before 0.20.0 an `HTTP::Server` handler would receive a request with its
 entire body already loaded in memory. This wasn't optimal, as maybe the
 body is needed, or it needs to be streamed. 0.20.0 introduces this (breaking)
 change. So, for example, one can stream a request directly into a JSON-mapped
-object, thus avoiding many intermediate memory allocations. 例をあげます。
+object, thus avoiding many intermediate memory allocations. For example:
 
 <div class="code_section">{% highlight ruby %}
 require "http/server"
 require "json"
 
 class Point
-JSON.mapping x: Float64, y: Float64
+  JSON.mapping x: Float64, y: Float64
 end
 
 # Accepts a JSON object representing a point and
 # returns its absolute value (distance)
 server = HTTP::Server.new(4567) do |context|
-request, response = context.request, context.response
-body = request.body
-if body
-point = Point.from_json(body)
-abs = Math.sqrt(point.x ** 2 + point.y ** 2)
-response.content_type = "application/json"
-{abs: abs}.to_json(response)
-else
-response.status_code = 400 # bad request
-response.content_type = "text/plain"
-response.puts "Missing body"
-end
+  request, response = context.request, context.response
+  body = request.body
+  if body
+    point = Point.from_json(body)
+    abs = Math.sqrt(point.x ** 2 + point.y ** 2)
+    response.content_type = "application/json"
+    {abs: abs}.to_json(response)
+  else
+    response.status_code = 400 # bad request
+    response.content_type = "text/plain"
+    response.puts "Missing body"
+  end
 end
 puts "Listening on port 4567"
 server.listen
@@ -122,7 +122,7 @@ so you can now upload a file very easily:
 require "http/client"
 
 response = File.open("some_file.txt") do |file|
-HTTP::Client.post("http://example.com", body: file)
+  HTTP::Client.post("http://example.com", body: file)
 end
 {% endhighlight ruby %}</div>
 
