fix(book): update book.json info to crystal-ja

--- a/locale/ja/crystal-book/book.json
+++ b/locale/ja/crystal-book/book.json
@@ -3,14 +3,14 @@
     "links": {
         "contributePrefix": "https://github.com/crystal-lang/crystal-book/"
     },
-    "plugins": ["ga", "edit-link", "offline"],
+    "plugins": ["edit-link", "offline"],
     "pluginsConfig": {
         "ga": {
             "token": "UA-42353458-1"
         },
         "edit-link": {
-            "base": "https://github.com/crystal-lang/crystal-book/edit/master",
-            "label": "Edit This Page"
+            "base": "https://github.com/crystal-jp/ja.crystal-lang.org/edit/master/locale/ja/crystal-book",
+            "label": "このページを編集"
         }
     }
 }
