chore: add make public

--- a/locale/ja/crystal-website/_config.yml
+++ b/locale/ja/crystal-website/_config.yml
@@ -1,6 +1,6 @@
-name: The Crystal Programming Language
-description: A compiled language with Ruby like syntax and type inference
-url: https://crystal-lang.org
+name: プログラミング言語 Crystal
+description: Ruby のような構文で型推論のあるコンパイル言語
+url: https://ja.crystal-lang.org
 logo: /images/crystal-h.png
 defaults:
   -
