fix: update base

--- a/locale/ja/crystal-book/book.json
+++ b/locale/ja/crystal-book/book.json
@@ -12,5 +12,8 @@
       "base": "https:/github.com/crystal-jp/ja.crystal-lang.org/edit/master/locale/ja/crystal-book",
       "label": "このページを編集"
     }
+  },
+  "structure": {
+    "readme": "introduction.md"
   }
 }
