feat: update translation

--- a/locale/ja/crystal-website/_data/install.yaml
+++ b/locale/ja/crystal-website/_data/install.yaml
@@ -1,10 +1,10 @@
 -
   url: /install/from_sources
-  caption: from sources
+  caption: ソースコードから
   icon: install/sources@2x.png
 -
   url: /install/from_targz
-  caption: from .tar.gz
+  caption: .tar.gz から
   icon: install/targz@2x.png
 -
   url: /install/on_mac_os
